Fix for overflow-x on desktop size

--- a/arches/app/media/css/pages/_search.scss
+++ b/arches/app/media/css/pages/_search.scss
@@ -5,6 +5,7 @@ article.main-search-container {
     }
     @include break-at(desktop-max) {
         flex-direction: column;
+        overflow-x: hidden;
     }
     .search-results-panel {
         @include break-at(desktop-max) {
